--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>👕 Clear Fahion | Environmentally & human-friendly clothes</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Clear fashion</h1>
@@ -19,23 +20,27 @@
         <label for="page-select">Go to page:</label>
         <select name="page" id="page-select"> </select>
       </div>
-      <div id="filters">
-        <span>By reasonable price</span>
-        <span>By recently released</span>
-        <div id="brand">
-          <label for="brand-select">By brands:</label>
-          <select name="brand" id="brand-select"> </select>
-        </div>
+      <div id="brand">
+        <label for="brand-select">By brands:</label>
+        <select name="brand" id="brand-select"> </select>
+      </div>
+      <div id="filter">
+        <label for="filter-select">Filter:</label>
+        <select name="filter" id="filter-select">
+          <option value="price-asc">Reasonable Price</option>
+          <option value="price-desc">Expensive</option>
+          <option value="date-asc">Recently Released</option>
+          <option value="date-desc">Anciently Released</option>
+        </select>
       </div>
       <div id="sort">
         <label for="sort-select">Sort:</label>
-        <select name="sort" id="sort-select">
-          <option value="price-asc">Cheaper</option>
-          <option value="price-desc">Expensive</option>
-          <option value="date-asc">Recently released</option>
-          <option value="date-desc">Anciently released</option>
-        </select>
+          Price: <input type="radio" id="sort-select" name="sortby" value="price">
+          Date: <input type="radio" id="sort-select" name="sortby" value="date">
       </div>
+      <div id="favorite">
+        <label for="favorite-select">Favorite:</label>
+          <input type="checkbox" id='favorite-select' name="favourite">
     </section>
     <section id="indicators">
       <h2>Indicators</h2>
@@ -45,19 +50,19 @@
       </div>
       <div>
         <span>Number of new products</span>
-        <span>0</span>
+        <span id="nbnewProducts">0</span>
       </div>
       <div>
         <span>p50 price value</span>
-        <span>0</span>
+        <span id="P50">0</span>
       </div>
       <div>
         <span>p90 price value</span>
-        <span>0</span>
+        <span id="P90">0</span>
       </div>
       <div>
         <span>p95 price value</span>
-        <span>0</span>
+        <span id="P95">0</span>
       </div>
       <div>
         <span>Last released date</span>
